...
		<p class="title">新規追加</p>
		<p class="explain">新しい板を追加する事ができます<br />ブラウザーからURLを受け取ることも可能です</p>

		<p class="title">並び替え</p>
		<p class="explain">つまみをドラッグして並び替えることができます</p>

		<p class="title">削除</p>
		<p class="explain">×ボタンで登録した板を削除します</p>

	</div>

	<label for="catalog" class="index">カタログ</label>
	<input type="checkbox" id="catalog" class="on-off" />
...
		<p class="title">DEL</p>
		<p class="explain">理由を選んでdelを送信します</p>

		<p class="title">削除</p>
		<p class="explain">書き込みを削除します</p>

		<p class="title">そうだね</p>
		<p class="explain">そうだねを送信します</p>

		<p class="title">クイック</p>
		<p class="explain">引用記号をつけて送信画面に転送します</p>

		<p class="title">返信</p>
		<p class="explain">引用する行を選択して送信画面に転送します</p>

		<p class="title">コピー</p>
...
