...
    "タブに追加する"
)

internal fun compatGalleryContextBaseLabels(): List<String> = listOf(
    "元レスに移動する",
    "画像を保存する",
    "サムネイルを再読み込みする",
    "NG画像に登録",
    "リンクURLをコピー",
    "ブラウザーで開く",
    "URLを共有",
    "画像を共有"
)

internal fun compatThreadImageContextBaseLabels(): List<String> =
...
